# axum-learning

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/database/: init.sql  mod.rs  prelude.rs
src/routes/: create_task.rs  create_user.rs  custom_json_extractor.rs  delete_task.rs  get_json.rs  get_tasks.rs  guard.rs  hello_world.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  partial_update_task.rs  path_variables.rs  set_middleware_custom_header.rs  update_tasks.rs  users.rs  validate_with_serde.rs
src/utils/: app_error.rs  jwt.rs
