[package]
name = "axum-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = {version = "0.9.3", features = ["typed-header"]}
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_with = "3.8.3"
tokio = { version = "1.38.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
